--- a/projets.html
+++ b/projets.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1 style="text-align: center; font-family: 'Kaushan Script', cursive; font-weight: 400; margin: 0; padding: 20px 0; color: #bb0368; text-shadow: 3px 3px 1px black;"> Yupi, the best!</h1>
+    <h2 style="text-align: center; font-family: 'Kaushan Script', cursive; font-weight: 400; margin: 0; padding: 20px 0; color: #490e2e; text-shadow: 3px 3px 1px black;"> Yupi, the best!</h2>
 </body>
 </html>
